missing the read, delete and update function

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <body>
     <header>
-      <h1>KIWOKO</h1>
+      <h1>KIKOWO</h1>
     </header>
 
     <main>
@@ -106,7 +106,7 @@
       </div>
     </main>
     <footer>
-      <h1>KIWOKO 2024</h1>
+      <h1>KIKOWO 2024</h1>
     </footer>
 
     <script
@@ -121,6 +121,6 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
   </body>
 </html>
