--- a/index.html
+++ b/index.html
@@ -100,6 +100,8 @@
             class="btn btn-danger form-control"
             value="Add Pet"
           />
+
+          <button class="btn btn-danger p4 mt-3">See Pets</button>
         </form>
 
         <div class="pet-list"></div>
