--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             value="Add Pet"
           />
 
-          <button class="btn btn-danger p4 mt-3">See Pets</button>
+          <button class="btn btn-danger p4 mt-3" id="see-pets">See Pets</button>
         </form>
 
         <div class="pet-list"></div>
