inline-flex is gonna hunt me in nightmares

--- a/index.html
+++ b/index.html
@@ -104,7 +104,9 @@
           <button class="btn btn-danger p4 mt-3" id="see-pets">See Pets</button>
         </form>
 
-        <div class="pet-list"></div>
+        <div
+          class="row justify-content-center align-items-center pet-list"
+        ></div>
       </div>
     </main>
     <footer>
